--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <nav>
       <ul>
         <li>
-          <a class="active" href="index.html">Home</a>
+          <a class="active" href="index.html">Home Page</a>
         </li>
         <li>
-          <a href="about.html">About</a>
+          <a href="about.html">About Page</a>
         </li>
       </ul>
     </nav>
